add payload schema to collection info + indexing fixes
